--- a/style.css
+++ b/style.css
@@ -122,6 +122,12 @@ a {
   border-radius: 8px;
 }
 
+.project-card img {
+  width: 100%;
+  height: 280px;
+  object-fit: cover;
+  border-radius: 6px;
+
 /* Sección extra */
 .timeline {
   list-style: none;
@@ -207,3 +213,4 @@ input, textarea {
     grid-template-columns: repeat(4, 1fr);
   }
 }
+
